added js to flip cards when clicked

--- a/index.html
+++ b/index.html
@@ -18,12 +18,9 @@
 	<p>Concentration, also known as Match Match, Memory, Pelmanism, Shinkei-suijaku, Pexeso or simply Pairs, is a card game in which all of the cards are laid face down on a surface and two cards are flipped face up over each turn. The object of the game is to turn over pairs of matching cards.</p>
 	<h2>Why play Concentration?</h2>
 	<p>Concentration is challenging, fun, and a rewarding expirence. Test how well you can pair these cards to see how amazing your memeory ACTUALLY is.</p>
-	<div>
-		<img src="images/back.png" alt="Queen of Diamonds">
-		<img src="images/back.png" alt="Queen of Hearts">
-		<img src="images/back.png" alt="King of Diamonds">
-		<img src="images/back.png" alt="King of Hearts">
-	</div>
+	
+	<div id="game-board" class="board clearfix"></div>
+	
 	<h2>Social Media</h2>
 	<p>Learn more about the developers by following them on <a href="https://twitter.com/GA_boston">Twitter</a> or <a href="https://www.instagram.com/ga.boston/">Instagram</a></p>
 </main>
