adding reset button

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
 	<p>Concentration is challenging, fun, and a rewarding expirence. Test how well you can pair these cards to see how amazing your memeory ACTUALLY is.</p>
 	
 	<div id="game-board" class="board clearfix"></div>
-	
+
+	<button>Play Again!</button>
+
 	<h2>Social Media</h2>
 	<p>Learn more about the developers by following them on <a href="https://twitter.com/GA_boston">Twitter</a> or <a href="https://www.instagram.com/ga.boston/">Instagram</a></p>
 </main>
