--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<h2 id="instrucTarget">Instructions</h2>
 	<p>Concentration, also known as Match Match, Memory, Pelmanism, Shinkei-suijaku, Pexeso or simply Pairs, is a card game in which all of the cards are laid face down on a surface and two cards are flipped face up over each turn. The object of the game is to turn over pairs of matching cards.</p>
 	<h2>Why play Concentration?</h2>
-	<p>Concentration is challenging, fun, and a rewarding expirence. Test how well you can pair these cards to see how amazing your memeory ACTUALLY is.</p>
+	<p>Concentration is challenging, fun, and a rewarding experience. Test how well you can pair these cards to see how amazing your memeory ACTUALLY is.</p>
 	
 	<div id="game-board" class="board clearfix"></div>
 
